重构Base64URL,如果可以调用jdk内置的base64则反射调用，否则使用自己实现的base64算法。